# task

./: .env  README.md  ai_logs.txt  chats.json  chats_data.json  date.session  date.session-journal  pyproject.toml  session_name.session
src/: ai_analiz.py  config.py  getDate.py  get_date.py  main.py
src/ai/: ai_analiz.py  ai_connect.py
src/config/: settings.py
src/models/: chat.py
src/telegram_client/: client.py  crud.py  fetch_date.py
src/utils/: save_json.py
